Remove env API usage. (#3)
* Remove env API usage.

* Bump version.

* Fix Dockerfile.

* Update packages.

* Remove unused deps.
